Now running esport queries in parallel